# ukpostcodes_tool

./: .darker.cfg  .gitignore  README.md  notes.md  pyproject.toml
examples/: postcodes_convert.sqlite  sampled_postcodes.csv  validate_from_csv.py  validate_from_db.py
src/ukpostcodes_tool/: constants.py  core.py  logging_setup.py
tests/: test_core.py  test_postcode.py
