[project]
name = "ukpostcodes-tool"
version = "0.1.0"
description = "UK post codes tool to validate and format"
authors = [{ name = "Manuel Seromenho" }]
requires-python = ">= 3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
ukpostcodes-tool = ""

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
